<resources>
    <!-- Title activities -->
    <string name="app_name">Palendar</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_events_firebase">EventsFirebaseActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Login & Register -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="text_login">Login</string>
    <string name="text_register">Register</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>

    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="text_not_member">No account yet? Sign up</string>
    <string name="text_already_member">Already have an account? Sign In</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="welcome_user_text">Welcome User</string>
    <string name="friend_details">Friend Name and Email</string>

    <!-- Error Messages -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_weak_password">Password must be at least 6 characters!</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <!-- Event Item -->
    <string name="event_name">Project Management Lecture</string>
    <string name="event_time">9:00AM - 10:30AM</string>
    <string name="event_location">Room 301</string>

    <!-- User Item -->
    <string name="user_name">Alex Nelson</string>
    <string name="user_email">alex@gmail.com</string>

    <!-- Events -->
    <string name="event_add_name">Event Name</string>
    <string name="check_invite">Invite</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_events">Events List</string>
    <string name="action_friends">Friends List</string>
    <string name="action_confirm">Confirm</string>
    <string name="friends_added">Friends Invited:</string>
    <string name="events_for_day">Events for:</string>
    <string name="action_week">My Schedule</string>
    <string name="empty_events_list">No events to display</string>

    <!-- Add Event -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="all_day">All Day</string>
    <string name="reminder">Set Reminder</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="invite">Invite Friends</string>
    <string name="name">Name</string>

    <!-- Arrays-->
    <string-array name="day_of_week_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="event_type_array">
        <item>Event Type</item>
        <item>Lecture</item>
        <item>Tutorial</item>
        <item>Meeting</item>
        <item>Consultation</item>
        <item>Exam</item>
    </string-array>

    <!-- Other -->
    <string name="empty_text" />

</resources>
