<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_schedule"
        android:orderInCategory="100"
        android:title="@string/action_week"
        android:icon="@drawable/ic_calendar_white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_friends_list"
        android:orderInCategory="100"
        android:title="@string/action_friends"
        android:icon="@drawable/ic_friends_white"
        app:showAsAction="always" />
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
