<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTeal"
    android:layout_marginTop="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:padding="20sp">

    <TextView
        android:id="@+id/event_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textStyle="bold" />

    <!-- Start time AND End time-->
    <TextView
        android:id="@+id/event_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/event_time" />

    <TextView
        android:id="@+id/event_item_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_item_name"
        android:text="@string/event_location" />


</RelativeLayout>